# LifeConsole

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp  main2.c
c/: CMakeLists.txt  Makefile
c/src/: life.h  main.c  syntax.c
python/: LifeConsole.py  README.md  debug.py  main.py
test/: cli.c
